--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -1,40 +1,38 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgres-pv-claim
-spec:
-  storageClassName: manual
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: postgres-pv-volume
-# labels:
-#   type: local
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 5Gi
-  accessModes:
-  - ReadWriteOnce
-  hostPath:
-    path: "/mnt/data"
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: postgres-secret-config
-type: Opaque
-data:
-  POSTGRES_USER: cG9zdGdyZXN1c2Vy #echo -n "postgresuser" | base64
-  POSTGRES_PASSWORD: cG9zdGdyZXNwYXNzd29yZA== #echo -n "postgrespassword" | base64
-  POSTGRES_DB: cG9zdGdyZXM= #echo -n "postgres" | base64
----
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: postgres-pv-claim
+# spec:
+#   storageClassName: manual
+#   accessModes:
+#   - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 1Gi
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: postgres-pv-volume
+# spec:
+#   storageClassName: manual
+#   capacity:
+#     storage: 5Gi
+#   accessModes:
+#   - ReadWriteOnce
+#   hostPath:
+#     path: "/mnt/data"
+# ---
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: postgres-secret-config
+# type: Opaque
+# data:
+#   POSTGRES_USER: cG9zdGdyZXN1c2Vy #echo -n "postgresuser" | base64
+#   POSTGRES_PASSWORD: cG9zdGdyZXNwYXNzd29yZA== #echo -n "postgrespassword" | base64
+#   POSTGRES_DB: cG9zdGdyZXM= #echo -n "postgres" | base64
+# ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -54,14 +52,13 @@ spec:
     targetPort: 5432
   selector:
     app: postgres
-    
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: postgres
@@ -72,9 +69,10 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: yungmannofar/postgres
+        image: yungmannofar/database #postgres:latest
         ports:
         - containerPort: 5432
+          name: postgres
         resources:
           limits:
             memory: 200Mi
@@ -84,27 +82,18 @@ spec:
             cpu: 200m
         env:
         - name: POSTGRES_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: postgres-secret-config
-              key: POSTGRES_PASSWORD
+          value: postgrespassword
         - name: POSTGRES_DB
-          valueFrom:
-            secretKeyRef:
-              name: postgres-secret-config
-              key: POSTGRES_DB   
+          value: postgres 
         - name: POSTGRES_USER
-          valueFrom:
-            secretKeyRef:
-              name: postgres-secret-config
-              key: POSTGRES_USER
-        - name: PGDATA
-          value: /var/lib/postgresql/data/pgdata
-        volumeMounts:
-        - mountPath: /var/lib/postgresql/data
-          name: postgres-pv-storage
-      volumes:
-        - name: postgres-pv-storage
-          persistentVolumeClaim:
-            claimName: postgres-pv-claim
+          value: postgresuser
+        # - name: PGDATA
+        #   value: /var/lib/postgresql/data/pgdata
+        # volumeMounts:
+        # - mountPath: /var/lib/postgresql/data
+        #   name: postgres-pv-storage
+      # volumes:
+      #   - name: postgres-pv-storage
+      #     persistentVolumeClaim:
+      #       claimName: postgres-pv-claim
 
