--- a/k8s/data_analysis.yaml
+++ b/k8s/data_analysis.yaml
@@ -1,44 +1,37 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: twitter-analysis-service
-spec:
-  type: LoadBalancer
-  ports:
-  - port: 8082
-    targetPort: 8082
-  selector:
-    app: twitter-analysis  
----
+# backend-deployment.yaml
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
-  name: twitter-analysis
+  name: backend
 spec:
-  serviceName: "twitter-analysis"
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      app: twitter-analysis
+      app: backend
   template:
     metadata:
       labels:
-        app: twitter-analysis
+        app: backend
     spec:
       containers:
-      - name: twitter-analysis
-        image: nginx:latest
+      - name: backend
+        image: matthewkoton/backend-flask-app:v2
         ports:
-        - containerPort: 8082
-  volumeClaimTemplates:
-  - metadata:
-      name: data
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "twitty-storage"
-      resources:
-        limits:
-          memory: "4Gi"
-          cpu: "2"
-        requests:
-          cpu: "1"
+        - containerPort: 5000
+        env:
+        - name: FLASK_ENV
+          value: "development"
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend-service
+spec:
+  type: ClusterIP
+  selector:
+    app: backend
+  ports:
+    - protocol: TCP
+      port: 5000
+      targetPort: 5000
