--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -1,20 +1,8 @@
-# Use an official Python runtime as a parent image
+# Dockerfile-frontend
 FROM python:3.8-slim
-
-# Set the working directory in the container
-WORKDIR /usr/src/app
-
-# Copy the current directory contents into the container at /usr/src/app
+WORKDIR /app
+COPY requirements-frontend.txt ./
+RUN pip install --no-cache-dir -r requirements-frontend.txt
 COPY . .
-
-# Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Make port 80 available to the world outside this container
-EXPOSE 80
-
-# Define environment variable
-ENV NAME World
-
-# Run app.py when the container launches
-CMD ["python", "app.py"]
+ENV FLASK_APP=app.py
+CMD ["flask", "run", "--host=0.0.0.0", "--port=80"]
