--- a/k8s/data_analysis.yaml
+++ b/k8s/data_analysis.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: matthewkoton/backend-flask-app:v2
+        image: matthewkoton/backend-flask-app:tag
         ports:
         - containerPort: 5000
         env:
