--- a/src/data_digest/Dockerfile
+++ b/src/data_digest/Dockerfile
@@ -4,6 +4,12 @@ FROM python:3.8-slim
 # Set the working directory in the container
 WORKDIR /usr/src/app
 
+
+# Install PostgreSQL client
+RUN apt-get update && \
+    apt-get install -y postgresql-client && \
+    rm -rf /var/lib/apt/lists/*
+
 # Copy the current directory contents into the container at /usr/src/app
 COPY . .
 
@@ -14,5 +20,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Make port 8081 available to the world outside this container
 EXPOSE 8081
 
-# Run data_digest_service.py when the container launches
-CMD ["python", "data_digest_service.py"]
+# Run start.sh when the container launches
+CMD ["/usr/src/app/entry_point.sh"]
