--- a/k8s/postgres_pvc.yaml
+++ b/k8s/postgres_pvc.yaml
@@ -1,10 +1,7 @@
----
-kind: PersistentVolume
 apiVersion: v1
+kind: PersistentVolume
 metadata:
-  name: postgres-pv
-  labels:
-    type: local
+  name: postgres-twitter-pv
 spec:
   storageClassName: manual
   capacity:
@@ -17,9 +14,10 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  labels:
-    app: postgres
+  # labels:
+  #   app: postgres
   name: postgres-pv-claim
+  # namespace: twitty 
 spec:
   storageClassName: manual
   accessModes:
