--- a/k8s/data_digest.yaml
+++ b/k8s/data_digest.yaml
@@ -29,7 +29,7 @@ spec:
         - name: POSTGRES_PASSWORD
           value: postgrespassword
         - name: POSTGRES_DB
-          value: postgres 
+          value: twitty 
         - name: POSTGRES_USER
           value: postgresuser
         - name: DB_URL
