--- a/k8s/postgres_pvc.yaml
+++ b/k8s/postgres_pvc.yaml
@@ -1,16 +1,16 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: postgres-twitter-pv
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 100M
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: "/data/twitter-pv0001/"
----
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: postgres-twitter-pv
+# spec:
+#   storageClassName: manual
+#   capacity:
+#     storage: 100M
+#   accessModes:
+#     - ReadWriteOnce
+#   hostPath:
+#     path: "/data/twitter-pv0001/"
+# ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
